# time-coin

./: .dockerignore  .gitattributes  .gitignore  API_FINAL_STATUS_REPORT.md  API_IMPROVEMENTS_COMPLETE.md  API_QUICK_REFERENCE.md  API_README.md  API_REFACTORING_SUMMARY.md  BLOCK-RECREATION-FIX.md  BUILD-VERIFICATION.md  CHANGELOG.md  CLAUDE.md  COMMIT_MSG.txt  CONSENSUS_VOTING_FIX.md  CONTRIBUTING.md  COPILOT_CLI_GUIDE.md  CRITICAL_FIXES_APPLIED.md  Cargo.toml  Dockerfile  FAIR_REWARDS_COMPLETE.md  GENESIS_SYNC_SIMPLIFICATION.md  GUI_WALLET_DERIVATION_BUG.md  IMPLEMENTATION_BENEFITS_EXPLAINED.md  IMPLEMENTATION_DASH_MASTERNODE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_TREASURY_API.md  IMPLEMENTATION_TREASURY.md  IMPLEMENTATION_TREASURY_VALIDATION.md  IMPLEMENTATION_VOTE_MATURITY.md  INSTANT_FINALITY_CHANGES.md  NETWORK_RECOVERY.md  PATHS.md  PROTOCOL_IMPLEMENTATION_AUDIT.md  README.md  README.md.backup  SECURITY.md  SOLUTION_SUMMARY.md  SUMMARY.md  SYNC_FIXES_APPLIED.md  SYNC_FIXES_CHECKLIST.md  (+42 more)
api/: .gitignore  Cargo.toml  Cargo.toml.bak.20251021-194716
api/src/: balance.rs  constants.rs  error.rs  grant_handlers.rs  grant_models.rs  grant_security.rs  handlers.rs  instant_finality_handlers.rs  lib.rs  masternode_handlers.rs  models.rs  models.rs.bak  proposal_handlers.rs  protocol_ws.rs  quarantine_handlers.rs  response.rs  routes.rs  routes.rs.backup  routes.rs.backup3  routes.rs.new  routes_temp.txt  rpc_handlers.rs  state.rs  state.rs.backup  state.rs.backup3  state_addition.txt  testnet_handlers.rs  treasury_handlers.rs  tx_sync_handlers.rs  wallet_send_handler.rs  wallet_sync_handlers.rs  websocket.rs
api/tests/: instant_finality_test.rs  rpc_integration.rs  treasury_error_cases.rs  treasury_integration.rs
cli/: Cargo.toml  Cargo.toml.bak.20251021-194447  Cargo.toml.bak.20251021-194717  build.rs
cli/src/: bft_consensus.rs  block_producer.rs  block_producer.rs.backup  block_producer.rs.backup_public_ip  chain_sync.rs  deterministic_consensus.rs  fast_sync.rs  main.rs  main.rs.backup  main.rs.backup.20251023_193902  main.rs.backup4  main.rs.backup_manual  simple_sync.rs  validation.rs
cli/tests/: genesis_test.rs  mempool_cli_test.rs  treasury_cli_test.rs
consensus/: Cargo.toml  Cargo.toml.bak.20251021-194717  REFACTORING_SUMMARY.md
consensus/src/: block_sync.rs  byzantine.rs  errors.rs  fallback.rs  foolproof_block.rs  heartbeat.rs  height_sync.rs  instant_finality.rs  leader_election.rs  lib.rs  midnight_consensus.rs  monitoring.rs  network_health.rs  orchestrator.rs  parallel_validation.rs  phased_protocol.rs  proposals.rs  quorum.rs  rate_limit.rs  simplified.rs  time_sync.rs  transaction_approval.rs  tx_sync.rs  tx_validation.rs  utxo_state_protocol.rs  voting.rs  vrf.rs
consensus/tests/: foolproof_integration.rs  node_tracking.rs
core/: Cargo.toml  Cargo.toml.bak.20251021-194718
core/examples/: hot_state_demo.rs  test_snapshot_issue.rs  treasury_demo.rs
core/src/: block.rs  chain_selection.rs  checkpoint.rs  constants.rs  db.rs  finalizer.rs  lib.rs  lib.rs.backup  masternode_tx.rs  masternode_uptime.rs  mempool.rs  merkle.rs  snapshot.rs  snapshot_service.rs  state.rs  time_sync.rs  time_validator.rs  transaction.rs  treasury_manager.rs  utxo_disk_backed.rs  utxo_locker.rs  utxo_set.rs  utxo_state_manager.rs  vdf_integration.rs
core/tests/: security_tests.rs  utxo_snapshot_persistence_test.rs
masternode/: CLEANUP_REPORT.md  Cargo.toml  Cargo.toml.bak.20251021-194449  Cargo.toml.bak.20251021-194720  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PLAN.md  PHASE_1_CHECKLIST.md  QUICK_START_IMPROVEMENTS.md  README.md  SLASHING.md  VIOLATION_DETECTION.md  WALLET.md  WALLET_IMPLEMENTATION.md
masternode/src/: address_monitor.rs  api_server.rs  blockchain_scanner.rs  collateral.rs  config.rs  detector.rs  error.rs  heartbeat.rs  lib.rs  main.rs  node.rs  registry.rs  reputation.rs  rewards.rs  security.rs  selection.rs  slashing.rs  slashing_executor.rs  start_protocol.rs  status.rs  types.rs  utxo_integration.rs  utxo_tracker.rs  violations.rs  voting.rs  wallet_api.rs  wallet_dat.rs  wallet_manager.rs  ws_bridge.rs  ws_server.rs
masternode/tests/: integration.rs  slashing_integration.rs  violation_detection.rs  vote_maturity.rs
mempool/: Cargo.toml
mempool/src/: lib.rs  lib.rs.backup  persistence_patch.txt  priority_queue.rs  resource_monitor.rs
network/: Cargo.toml  Cargo.toml.bak.20251021-194450  Cargo.toml.bak.20251021-194720  build.rs
network/examples/: discover_peers.rs
network/src/: config.rs  connection.rs  discovery.rs  discovery.rs.backup  error.rs  lib.rs  manager.rs  manager.rs.backup.20251023_193903  message_auth.rs  message_handler.rs  peer_exchange.rs  protocol.rs  protocol_v2.rs  quarantine.rs  rate_limiter.rs  sync.rs  sync_manager.rs  sync_messages.rs  time_sync.rs  tx_broadcast.rs  tx_sync.rs  unified_connection.rs  utxo_handler.rs  utxo_sync.rs
network/tests/: integration_tests.rs
storage/: Cargo.toml
storage/src/: finalized_txs.rs  lib.rs
tools/masternode-dashboard/: Cargo.toml  send-from-treasury.sh
tools/tx-perf-test/: Cargo.toml  README.md  example.sh  (+5 more)
treasury/: Cargo.toml
wallet/: BIP39_IMPLEMENTATION.md  Cargo.toml  Cargo.toml.bak.20251021-194453
wallet-gui/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  add_blockchain_fetch.py  add_fetch_method.py  add_qr.py  add_svg_renderer.py  clean_duplicate_code.py  debug_peer_query.py  final_fix.py  fix_all_errors.py  fix_async_mutex.py  fix_async_properly.py  fix_blockchain_endpoint.py  fix_bootstrap_signature.py  fix_function_names.py  fix_missing_api.py  fix_network_access.py  fix_network_integration.py  fix_network_methods.py  fix_network_state.py  fix_peer_query.py  fix_qr_color.py  fix_qr_properly.py  fix_start_sync.py  fix_sync_logic.py  integrate_network.py  manual_fix.py  redesign_wallet.py  test_api.py  test_api_endpoint.py  test_api_simple.py  test_blockchain_endpoint.py  test_correct_port.py  test_more_endpoints.py  test_network_direct.py  test_peer_endpoints.py  test_peer_ports.py  update_status_bar.py  use_svg_qr.py
wallet-gui-simple/: Cargo.toml
(+510 files in other folders)
