[workspace]
members = [
    "consensus",
    "core",
    "masternode",
    "treasury",
    "network",
    "purchase",
    "wallet",
    "api",
    # "storage",
    "crypto",
    "cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TIME Coin Developers"]
license = "MIT"
repository = "https://github.com/time-coin/time-coin"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
sha3 = "0.10"
ed25519-dalek = "2.1"
secp256k1 = "0.28"
ring = "0.17"

[patch.crates-io]
# Force a single Windows target stack across the workspace to avoid cargo-deny bans








# (Optional) If your deps pull `windows-sys` directly, pin it too:
# windows-sys = "=0.53.0"
# Force a single Windows target stack across the workspace to avoid cargo-deny bans
# (Optional) If your deps pull `windows-sys` directly, pin it too:
# windows-sys = "=0.53.0"
# Unify Windows target stack to satisfy cargo-deny bans
# If cargo-deny later flags windows-sys duplicates, align this too, e.g.:
# windows-sys = "=0.59.0"
