[workspace]
members = [
    "core",
    "wallet",
    "network",
    "consensus",
    "cli",
    "api",
    "mempool",
    "masternode",
    "treasury",
    "storage",
    "tools/masternode-dashboard",
    "tools/tx-perf-test",
    "tools/utxo-protocol-demo",
    "wallet-gui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TIME Coin Contributors"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
thiserror = "2.0"
anyhow = "1.0"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
clap = { version = "4.0", features = ["derive"] }
toml = "0.9"
local-ip-address = "0.6"
owo-colors = "4.0"
md5 = "0.8"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.9"
trust-dns-resolver = "0.23"
bincode = "1.3"
sled = "0.34"
uuid = { version = "1.0", features = ["v4"] }
# Consolidate duplicate dependencies

parking_lot = "0.12"
png = "0.18"
rand_chacha = "0.9"
rand_core = "0.9"

[profile.release]
opt-level = "z"       # Optimize for size instead of speed
lto = true            # Link Time Optimization
codegen-units = 1     # Better optimization, single codegen unit
strip = true          # Strip symbols
panic = "abort"       # Remove unwinding code