[package]
name = "time-api"
version.workspace = true
edition.workspace = true

[dependencies]
time-core = { path = "../core" }
time-crypto = { path = "../crypto" }
time-consensus = { path = "../consensus" }

# Web framework
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = "0.4"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
