[package]
name = "time-api"
license = "MIT OR Apache-2.0"
version.workspace = true
edition.workspace = true

[dependencies]
time-network = { version = "0.1.0", path = "../network" }
time-core = { version = "0.1.0", path = "../core" }
time-crypto = { version = "0.1.0", path = "../crypto" }
time-consensus = { version = "0.1.0", path = "../consensus" }
time-mempool = { version = "0.1.0", path = "../mempool" }

# Web framework
axum = "0.8"
tokio = { version = "1.35", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = "0.4"
thiserror = "2.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
md5 = "0.7"
owo-colors = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
md5 = "0.7"
