[package]
name = "time-api"
license = "MIT OR Apache-2.0"
version.workspace = true
edition.workspace = true

[dependencies]
time-network = { version = "0.1.0", path = "../network" }
time-core = { version = "0.1.0", path = "../core" }
time-crypto = { version = "0.1.0", path = "../crypto" }
time-consensus = { version = "0.1.0", path = "../consensus" }
time-mempool = { version = "0.1.0", path = "../mempool" }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tokio = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = "0.4"
thiserror = "2.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
md5 = "0.8"
owo-colors = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
md5 = "0.8"
