[package]
name = "time-node"
license = "MIT OR Apache-2.0"
version.workspace = true
edition.workspace = true

[[bin]]
name = "time-node"
path = "src/main.rs"

[[bin]]
name = "time-cli"
path = "src/bin/time-cli.rs"

[dependencies]
local-ip-address = "0.5"
time-network = { version = "0.1.0", path = "../network" }
time-core = { version = "0.1.0", path = "../core" }
time-api = { version = "0.1.0", path = "../api" }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
serde_json = { workspace = true }
owo-colors = "4"
reqwest = { version = "0.11", features = ["json"] }
time-consensus = { version = "0.1.0", path = "../consensus" }
md5 = "0.7"
