[package]
name = "time-cli"
license = "MIT OR Apache-2.0"
version.workspace = true
edition.workspace = true

[[bin]]
name = "time-node"
path = "src/main.rs"

[[bin]]
name = "time-cli"
path = "src/bin/time-cli.rs"

[[bin]]
name = "time-dashboard"
path = "src/bin/time-dashboard.rs"

[dependencies]
local-ip-address = "0.5"
time-network = { version = "0.1.0", path = "../network" }
time-core = { version = "0.1.0", path = "../core" }
time-api = { version = "0.1.0", path = "../api" }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
toml = "0.9"
chrono = "0.4"
owo-colors = "4"
reqwest = { version = "0.11", features = ["json"] }
sled = "0.34"
ed25519-dalek = { version = "2.0", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
md5.workspace = true
time-consensus = { version = "0.1.0", path = "../consensus" }
time-mempool = { version = "0.1.0", path = "../mempool" }
wallet = { version = "0.1.0", path = "../wallet" }
sysinfo = "0.29"
crossterm = "0.27"
