[package]
name = "time-cli"
license = "MIT OR Apache-2.0"
version.workspace = true
edition.workspace = true

[[bin]]
name = "timed"
path = "src/main.rs"

[[bin]]
name = "time-cli"
path = "src/bin/time-cli.rs"

[[bin]]
name = "time-dashboard"
path = "src/bin/time-dashboard.rs"

[dependencies]
local-ip-address = { workspace = true }
time-network = { version = "0.1.0", path = "../network" }
time-core = { version = "0.1.0", path = "../core" }
time-api = { version = "0.1.0", path = "../api" }
time-crypto = { version = "0.1.0", path = "../crypto" }
time-masternode = { version = "0.1.0", path = "../masternode" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
owo-colors = { workspace = true }
reqwest = { workspace = true }
sled = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
md5 = { workspace = true }
time-consensus = { version = "0.1.0", path = "../consensus" }
time-mempool = { version = "0.1.0", path = "../mempool" }
wallet = { version = "0.1.0", path = "../wallet" }
sysinfo = { workspace = true }
crossterm = { workspace = true }
sha3 = { workspace = true }
futures = { workspace = true }