[package]
name = "time-consensus"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
sha2 = "0.10"
rand = "0.9"
chrono = "0.4"
tokio = { workspace = true }
time-core = { version = "0.1.0", path = "../core" }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio = { version = "1.35", features = ["test-util"] }
