[package]
name = "time-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
sha2.workspace = true
sha3.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

