[package]
name = "time-core"
license = "MIT OR Apache-2.0"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
sled = "0.34"
bincode = "1.3"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
sha2.workspace = true
sha3.workspace = true
hex = "0.4"
uuid = { workspace = true, features = ["v4"] }
time-crypto = { version = "0.1.0", path = "../crypto" }
lru = "0.12"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
