[package]
name = "time-core"
license = "BUSL-1.1"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
sled = { workspace = true }
# rocksdb = { workspace = true }  # Phase 2 - requires LLVM/clang
bincode = { workspace = true }
flate2 = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
sha2.workspace = true
sha3.workspace = true
hex = { workspace = true }
lru = "0.12"
ed25519-dalek = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.14"
