[package]
name = "time-masternode"
license = "MIT OR Apache-2.0"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "time-masternode"
path = "src/main.rs"

[lib]
name = "time_masternode"
path = "src/lib.rs"

[dependencies]
time-core = { version = "0.1.0", path = "../core" }
time-crypto = { version = "0.1.0", path = "../crypto" }
time-consensus = { version = "0.1.0", path = "../consensus" }
wallet = { version = "0.1.0", path = "../wallet" }
treasury = { version = "0.1.0", path = "../treasury" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
tokio = { workspace = true }
tokio-tungstenite = "0.21"
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"


[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
