[package]
name = "time-masternode"
license = "MIT OR Apache-2.0"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "time_masternode"
path = "src/lib.rs"

[[bin]]
name = "masternode-api"
path = "src/bin/api_server.rs"

[dependencies]
time-core = { version = "0.1.0", path = "../core" }
time-crypto = { version = "0.1.0", path = "../crypto" }
time-consensus = { version = "0.1.0", path = "../consensus" }
time-network = { version = "0.1.0", path = "../network" }
time-mempool = { version = "0.1.0", path = "../mempool" }
wallet = { version = "0.1.0", path = "../wallet" }
treasury = { version = "0.1.0", path = "../treasury" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
tokio = { workspace = true }

log = "0.4"
env_logger = "0.11"
tracing = "0.1"
reqwest = { workspace = true }
base64 = "0.22"
bincode = { workspace = true }
dirs = "6.0"
axum = "0.7"


[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.14"
