[package]
name = "time-mempool"
version = "0.1.0"
edition = "2021"

[dependencies]
time-core = { path = "../core" }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"

sysinfo = "0.29"
[dev-dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
