[package]
name = "time-mempool"
version.workspace = true
edition = "2021"
license = "BUSL-1.1"

[dependencies]
time-core = { version = "0.4.0", path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
sysinfo = { workspace = true }

[dev-dependencies]
