[package]
name = "time-network"
license = "MIT OR Apache-2.0"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
time-core = { version = "0.1.0", path = "../core" }
time-consensus = { version = "0.1.0", path = "../consensus" }
time-mempool = { version = "0.1.0", path = "../mempool" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["net", "rt", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
local-ip-address = { workspace = true }
rand = "0.9"
chrono.workspace = true
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[build-dependencies]
chrono.workspace = true