[package]
name = "time-storage"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
time-core = { path = "../core" }
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
