[package]
name = "time-storage"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
time-core = { path = "../core", version = "0.1.0" }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
