[package]
name = "treasury"
version = "0.1.0"
edition = "2021"
authors = ["TIME Coin Developers"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }

[[test]]
name = "integration"
path = "tests/integration.rs"
