[package]
name = "wallet-gui-simple"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "wallet-gui-simple"
path = "src/main.rs"

[dependencies]
eframe = "0.31"
egui = "0.31"
tokio = { workspace = true, features = ["sync", "io-util", "net", "rt-multi-thread", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = "0.11"
bincode = { workspace = true }
base64 = "0.22"
sha2 = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1.8", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
chrono = { workspace = true }
thiserror = { workspace = true }
dirs = "6.0"
wallet = { path = "../wallet", version = "0.1.0" }
time-network = { path = "../network", version = "0.1.0" }
time-core = { path = "../core", version = "0.1.0" }
