[package]
name = "wallet-gui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
sled = "0.34"
uuid = { version = "1.0", features = ["v4"] }
bincode = "1.3"
thiserror = "2.0"
dirs = "5.0"
base64 = "0.22"
resvg = "0.44"
tiny-skia = "0.11"
printpdf = "0.7"

# Local wallet dependency from parent project
wallet = { path = "../wallet", version = "0.1.0" }

