[package]
name = "wallet-gui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
chrono = { workspace = true }
sled = { workspace = true }
uuid = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
dirs = "5.0"
base64 = "0.22"
resvg = "0.44"
tiny-skia = "0.11"
printpdf = "0.7"

# Local wallet dependency from parent project
wallet = { path = "../wallet", version = "0.1.0" }

