[package]
name = "wallet"
license = "MIT OR Apache-2.0"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
ed25519-dalek = "2.1"
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3"
sha2 = "0.10"
ripemd = "0.1"
bs58 = "0.5"
hex = "0.4"
thiserror = "2.0"
chrono = "0.4"
bip39 = { version = "2.2", features = ["serde", "rand"] }
bip32 = "0.5"
time-core = { version = "0.1.0", path = "../core" }
qrcode = "0.14"
time-mempool = { version = "0.1.0", path = "../mempool" }
sled = "0.34"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
time-mempool = { version = "0.1.0", path = "../mempool" }