[package]
name = "wallet"
license = "BUSL-1.1"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
hmac = "0.12"
rand = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
num-bigint = "0.4"
hex = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
bip39 = { version = "2.2", features = ["serde", "rand"] }
qrcode = "0.14"
sled = { workspace = true }
tokio = { workspace = true, features = ["rt", "time"] }
log = { workspace = true }

# Encryption dependencies
aes-gcm = { workspace = true }
argon2 = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
env_logger = { workspace = true }
time-core = { version = "0.6.2", path = "../core" }
time-mempool = { version = "0.6.2", path = "../mempool" }