[package]
name = "masternode-dashboard"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
crossterm = "0.29"
ctrlc = "3.4"
toml = "0.9"
