[package]
name = "tx-perf-test"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
wallet = { version = "0.1.0", path = "../../wallet" }
time-core = { version = "0.1.0", path = "../../core" }
economics = { version = "0.1.0", path = "../../economics" }
