[package]
name = "utxo-protocol-demo"
version = "0.1.0"
edition = "2021"
authors = ["TIME Coin Contributors"]
license = "MIT OR Apache-2.0"
description = "Demo implementation of TIME Coin Protocol"

[dependencies]
tokio = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# TIME Coin crates
time-core = { path = "../../core", version = "0.1.0" }
time-consensus = { path = "../../consensus", version = "0.1.0" }
